# pratai-api

./: README.rst  requirements.txt  setup.cfg
etc/: pratai-api.conf
pratai_api/: api.py  config.py  db_init.py  log.py  models.py  q.py  utils.py
