[metadata]
name = pratai-api

summary = OpenStack Event Driven Compute API Service
description-file =
    README.md

author = Pratai Team
author_email = openstack-dev@lists.openstack.org

home-page = https://wiki.openstack.org/wiki/Pratai
classifier =
    Environment :: OpenStack
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Topic :: System :: Archiving :: EventDriven

[files]
packages =
    pratai_api

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[entry_points]
console_scripts =
    pratai-api = pratai_api.api:main
    pratai-db-init = pratai_api.db_init:main

[pytests]
where=tests
verbosity=2

[pbr]
warnerrors = True